# tl2jgen-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  dvc.yaml  hello.py  pyproject.toml
example/: .gitignore  build.gradle.kts  settings.gradle.kts
example/gradle/wrapper/: gradle-wrapper.properties
example/src/main/kotlin/com/github/aaarrti/tl2jgen/: ResourceReader.kt
example/src/test/kotlin/com/github/aaarrti/tl2jgen/: RandomForestTest.kt  XgboostTest.kt
scripts/: export_model.py  export_random_forest.py  export_xgboost.py  generate_random_forest.sh  generate_xgboost.sh  verify_model.py
src/: backend.rs  cli.rs  ir.rs  main.rs
