[project]
name = "tl2cgen-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "tl2cgen>=1.0.0",
    "treelite>=4.4.1",
    "dvc>=3.59.1",
]
