[project]
name = "tl2jgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "tl2cgen>=1.0.0",
    "xgboost>=3.0.0",
    "black>=25.1.0",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "treelite>=4.4.1",
]
